[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/inimigos/ranged_1/torreto_arma.png" type="Texture" id=1]
[ext_resource path="res://scripts/inimigos/inimigo_ranged_1.gd" type="Script" id=2]
[ext_resource path="res://scripts/inimigos/hit_boxes/hit_box_inimigo_ranged_1.gd" type="Script" id=3]
[ext_resource path="res://animations/aviso_ataque_piscada.tres" type="Animation" id=4]
[ext_resource path="res://sprites/inimigos/ranged_1/torreto.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.397, 5.2623 )

[sub_resource type="Animation" id=2]
resource_name = "tiro"
length = 0.21
step = 0.05

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.8232, 23.6762 )

[node name="inimigo_ranged_1" type="KinematicBody2D" groups=[
"inimigos",
]]
collision_layer = 2
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -20 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 23.6829, 47.4624 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.125, -1.375 )
shape = SubResource( 1 )

[node name="warning" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -20 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 23.971, 0, 23.683, 47.462 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aviso_ataque_piscada = ExtResource( 4 )
anims/tiro = SubResource( 2 )

[node name="cadencia_tiro" type="Timer" parent="."]

[node name="hit_box" type="Area2D" parent="." groups=[
"inimigos",
]]
position = Vector2( 0, -32 )
collision_layer = 64
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
position = Vector2( 0.301781, 12.8012 )
shape = SubResource( 3 )

[node name="arma" type="Sprite" parent="."]
position = Vector2( 0.25, -21.3481 )
texture = ExtResource( 1 )
offset = Vector2( 6, -0.5 )

[node name="Position2D" type="Position2D" parent="arma"]
position = Vector2( 15.9054, -0.517845 )
scale = Vector2( 1, 5 )
[connection signal="timeout" from="cadencia_tiro" to="." method="_on_cadencia_tiro_timeout"]
